fix logo visibiility

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -130,6 +130,7 @@ header {
   position: relative;
   top: 5px;
   left: 8rem;
+  font-weight: 600;
 }
 
 .logo-image {
